# vellum

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  grammar.txt  mkdocs.yml  requirements-docs.txt  roadmap.md  todo.txt
.github/workflows/: docs.yml  vscode-extension.yml  windows.yml
apps/vellum/: CMakeLists.txt  main.cpp
apps/vellum-lsp/: CMakeLists.txt  completion_context.h  completion_items.h  completions_provider.cpp  declaration_index.h  diagnostics.cpp  document_analyzer.cpp  document_store.cpp  lsp_locations.cpp  lsp_locations.h  main.cpp  static_analyze.h  vellum_keywords.h
docs/: arrays.md  casts.md  compiler.md  control_flow.md  download.md  examples.md  functions.md  imports.md  index.md  inheritance.md  match.md  modifiers.md  overview.md  properties.md  states.md  strings.md  variables.md  vscode.md
docs/stylesheets/: vellum-code.css
examples/: CountActorsEntered.vel  CountItems.vel  MathEx.vel  ShowActorsCount.vel  SpellOnEquip.vel  TrainingMannequin.vel
libs/vellum-compiler/: CMakeLists.txt
libs/vellum-compiler/analyze/: declaration_analysis.cpp  declaration_analysis.h  declaration_collector.cpp  import_library.cpp  import_library.h  import_resolver.cpp  import_resolver.h  modifier_validator.cpp  modifier_validator.h  semantic_analyzer.cpp  semantic_analyzer.h  type_checker.cpp  type_collector.cpp  type_collector.h
libs/vellum-compiler/common/: byte_swap.h  flags.h  fs.cpp  fs.h  os.cpp  os.h  sentry_report.cpp  string_utils.h  types.h
libs/vellum-compiler/compiler/: call_resolution.cpp  call_resolution.h  scope.h  (+8 more)
libs/vellum-diag/: CMakeLists.txt  platform_paths.cpp  platform_paths.h  run_guarded.h  sentry_report.cpp  sentry_report.h  sentry_session.cpp  sentry_session.h  vellum_sentry.cmake
libs/vellum-lsp/: CMakeLists.txt  ast_locator.cpp  completion_collectors.cpp  completion_collectors.h  completion_context.cpp  completions_provider.cpp  declaration_index.cpp  definitions_provider.cpp  diagnostics.cpp  diagnostics.h  document_analyzer.cpp  document_store.cpp  document_store.h  lsp_locations.cpp  lsp_utf16.cpp  lsp_utf16.h  navigation_utils.cpp  navigation_utils.h  semantic_tokens.cpp  server.cpp  server.h  static_analyze.cpp  vellum_keywords.h
lsp-server/: CMakeLists.txt  ast_locator.cpp  ast_locator.h  completion_collectors.cpp  completion_collectors.h  completion_context.cpp  completion_context.h  completion_items.cpp  completion_smoke_test.cpp  completions_provider.cpp  completions_provider.h  declaration_index.cpp  declaration_index.h  definitions_provider.cpp  definitions_provider.h  diagnostics.cpp  diagnostics.h  document_analyzer.cpp  document_analyzer.h  document_store.cpp  document_store.h  lsp_locations.cpp  lsp_locations.h  main.cpp  navigation_utils.cpp  semantic_tokens.cpp  semantic_tokens.h  server.cpp  server.h  static_analyze.cpp  static_analyze.h
scripts/: build-prod.bat  build-prod.sh  upload-symbols.bat  upload-symbols.sh
src/: CMakeLists.txt  main.cpp  vellum.cpp  vellum.h
src/analyze/: declaration_collector.cpp  declaration_collector.h  import_declaration_collector.cpp  import_declaration_collector.h  import_library.cpp  import_library.h  import_resolver.cpp  import_resolver.h  semantic_analyzer.cpp  semantic_analyzer.h  type_checker.cpp  type_checker.h  type_collector.cpp  type_collector.h
src/ast/: expression.h  statement.cpp  statement.h  statement_visitor.h
src/ast/decl/: declaration.cpp  declaration.h  declaration_visitor.h
src/ast/expression/: expression.cpp  expression.h  expression_visitor.h
src/ast/statement/: statement.cpp  statement.h  statement_visitor.h
src/common/: binary_writer.h  byte_swap.h  flags.h  fs.cpp  fs.h  os.cpp  os.h  sentry_report.cpp  sentry_report.h  string_set.cpp  string_set.h  string_utils.h  types.h
src/compiler/: builtin_functions.cpp  builtin_functions.h  compiler.cpp  compiler.h  compiler_error_handler.cpp  compiler_error_handler.h  pex_function_compiler.cpp  pex_function_compiler.h  pex_object_compiler.cpp  pex_object_compiler.h  resolver.cpp  resolver.h  scope.cpp  scope.h
src/game/: game_id.h
src/lexer/: ilexer.h  lexer.cpp  lexer.h  token.h
src/parser/: papyrus_lexer.cpp  papyrus_lexer.h  papyrus_parser.cpp  papyrus_parser.h  parser.cpp  parser.h
src/pex/: pex_debug_function_info.h  pex_debug_info.cpp  pex_file.cpp  pex_file.h  pex_function.cpp  pex_function.h  pex_function_parameter.cpp  pex_identifier.h  pex_instruction.cpp  pex_instruction.h  pex_object.cpp  pex_object.h  pex_opcode.h  pex_property.h  pex_state.h  pex_string_table.cpp  pex_string_table.h  pex_user_flag.cpp  pex_user_flag.h  pex_value.cpp  pex_value.h  pex_variable.cpp  pex_variable.h  pex_writer.cpp  pex_writer.h
src/tools/: parse_psc.cpp
src/vellum/: vellum.cpp  vellum.h  vellum_function.cpp  vellum_function.h  vellum_identifier.cpp  vellum_identifier.h  vellum_literal.cpp  vellum_literal.h  vellum_object.cpp  vellum_object.h  vellum_property.cpp  vellum_property.h  vellum_state.h  vellum_type.cpp  vellum_type.h  vellum_value.cpp  vellum_value.h  vellum_variable.cpp  vellum_variable.h
test/: CMakeLists.txt
test/unit/: compiler_tests.cpp  import_call_tests.cpp  import_library_tests.cpp  lexer_tests.cpp  papyrus_parser_tests.cpp  parser_tests.cpp  semantic_tests.cpp  utils.cpp  utils.h
test/unit/lsp/: array_syntax_lsp_tests.cpp  completion_tests.cpp  definition_tests.cpp  diagnostics_tests.cpp  document_store_tests.cpp  lsp_fixture.h  lsp_locations_tests.cpp  semantic_tokens_tests.cpp
test/unit/mock/: mock_lexer.cpp  mock_lexer.h
tools/parse-psc/: CMakeLists.txt  parse_psc.cpp
tools/scripts/: build-prod.bat  build-prod.sh  read-cmake-project-version.ps1  upload-symbols.bat  upload-symbols.sh
tools/vellum-pygments/: pyproject.toml
tools/vellum-pygments/vellum_pygments/: __init__.py  lexer.py
tools/vellum-pygments/vellum_pygments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vscode-ext/: language-configuration.json  package-lock.json  package.json
vscode-ext/syntaxes/: vellum.tmLanguage.json
(+65 files in other folders)
